@@ -1,3 +1,9 @@
+2005-11-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gstregistry.c:
+	* gst/gstregistry.h:
+	  added missing docs
+
 2005-11-04  Edward Hervey  <edward@fluendo.com>
 
 	* gst/base/gstbasesrc.c: (gst_base_src_get_range):
